--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,6 @@ dependencies {
     implementation("com.google.firebase:firebase-analytics-ktx")
     implementation 'com.google.android.gms:play-services-auth:20.4.0'
     implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
+    implementation 'com.squareup.picasso:picasso:2.8'
 
 }
